@@ -11,3 +11,19 @@
         {lager, ".*", {git, "https://github.com/erlang-lager/lager.git", {tag, "3.2.4"}}},
         {stacktrace_compat, ".*", {git, "https://github.com/g-andrade/stacktrace_compat.git", {tag, "1.0.0"}}}
 ]}.
+
+{dialyzer,
+ [{plt_include_all_deps, true},
+  {warnings,
+   [error_handling
+   ]}
+ ]}.
+
+{xref_checks,
+ [undefined_function_calls,
+  undefined_functions,
+  locals_not_used,
+  exports_not_used,
+  deprecated_function_calls,
+  deprecated_functions
+ ]}.
