@@ -100,15 +100,10 @@ test_no(N, Tests) ->
 %%% Eunit setup stuff
 
 start_app() ->
-    application:start(asn1),
-    application:start(crypto),
-    application:start(public_key),
-    ok = application:start(ssl),
-    ok = lhttpc:start().
+    {ok, _} = application:ensure_all_started(lhttpc).
 
 stop_app(_) ->
-    ok = lhttpc:stop(),
-    ok = application:stop(ssl).
+    ok = application:stop(lhttpc).
 
 tcp_test_() ->
     {inorder, 
